k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuby-deployment
  namespace: kuby
  labels:
    app: kuby
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuby
  template:
    metadata:
      labels:
        app: kuby
    spec:
      serviceAccountName: kuby-service-account
      containers:
      - name: kuby-container
        image: 905418489216.dkr.ecr.us-east-1.amazonaws.com/kuby/kuby:v3
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "150m"
