k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kuby
  name: kuby-service
  namespace: kuby
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: kuby
  type: ClusterIP
