k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kuby-ingress
  namespace: kuby
spec:
  ingressClassName: nginx
  rules:
  - host: kuby.osamalabs.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kuby-service
            port:
              number: 80
